把项目放到了zendstdio里，并把出现的所有的提示的语法错误改了一下，还是很头疼

--- a/model/Html/adminhtml/Basic/cache.html
+++ b/model/Html/adminhtml/Basic/cache.html
@@ -34,7 +34,11 @@
 
 </div>
 <!-- /#wrapper -->
-<script type="text/javascript" src="/Public/js/admin/form.js"></script>
+<!-- <script type="text/javascript" src="/Public/js/admin/form.js"></script> -->
+<load href='__PUBLIC__/js/admin/form.js' />
+
+js/admin/form.js
+
 <script>
   $("#cache-index").click(function(){
 
