--- a/model/Html/adminhtml/Positioncontent/add.html
+++ b/model/Html/adminhtml/Positioncontent/add.html
@@ -103,6 +103,12 @@
 	};
 </script>
 <!-- /#wrapper -->
-<script type="text/javascript" src="/Public/js/admin/form.js"></script>
-<script src="/Public/js/admin/image.js"></script>
+<!-- <script type="text/javascript" src="/Public/js/admin/form.js"></script>
+<script src="/Public/js/admin/image.js"></script> -->
+<load href='__PUBLIC__/js/admin/form.js' />
+<load href='__PUBLIC__/js/admin/image.js' />
 <include file="Index/footer" />
+
+
+
+
