--- a/model/Html/adminhtml/Admin/personal.html
+++ b/model/Html/adminhtml/Admin/personal.html
@@ -80,5 +80,13 @@
 
 </script>
 <!-- /#wrapper -->
-<script type="text/javascript" src="/Public/js/admin/form.js"></script>
+<!-- <script type="text/javascript" src="/Public/js/admin/form.js"></script> -->
+<load href='__PUBLIC__/js/admin/form.js' />
 <include file="Index/footer" />
+
+
+
+
+
+
+
