--- a/model/Html/adminhtml/Basic/index.html
+++ b/model/Html/adminhtml/Basic/index.html
@@ -38,16 +38,16 @@
 					<div class="form-group">
 						<label for="inputPassword3" class="col-sm-2 control-label">是否自动备份数据库:</label>
 						<div class="col-sm-5">
-							<input type="radio" name="dumpmysql" id="optionsRadiosInline1" value="1" <if condition="$vo['dumpmysql'] eq 1">checked</if>> 是
-                            <input type="radio" name="dumpmysql" id="optionsRadiosInline2" value="0" <if condition="$vo['dumpmysql'] eq 0">checked</if>> 否
+							<input type="radio" name="dumpmysql" id="optionsRadiosInline1" value="1"> <if condition="$vo['dumpmysql'] eq 1">checked</if>> 是
+                            <input type="radio" name="dumpmysql" id="optionsRadiosInline2" value="0"><if condition="$vo['dumpmysql'] eq 0">checked</if>> 否
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label for="inputPassword3" class="col-sm-2 control-label">是否自动生成首页缓存:</label>
 						<div class="col-sm-5">
-							<input type="radio" name="cacheindex" id="optionsRadiosInline1" value="1" <if condition="$vo['cacheindex'] eq 1">checked</if>> 是
-                            <input type="radio" name="cacheindex" id="optionsRadiosInline2" value="0" <if condition="$vo['cacheindex'] eq 0">checked</if>> 否
+							<input type="radio" name="cacheindex" id="optionsRadiosInline1" value="1"> <if condition="$vo['cacheindex'] eq 1">checked</if>> 是
+                            <input type="radio" name="cacheindex" id="optionsRadiosInline2" value="0"><if condition="$vo['cacheindex'] eq 0">checked</if>> 否
 						</div>
 					</div>
 
@@ -73,7 +73,8 @@
 
 </div>
 <!-- /#wrapper -->
-<script type="text/javascript" src="/Public/js/admin/form.js"></script>
+<!-- <script type="text/javascript" src="/Public/js/admin/form.js"></script> -->
+<load href='__PUBLIC__/js/admin/form.js' />
 <script>
 	var SCOPE = {
 		'save_url' : '/admin.php?c=basic&a=add',
@@ -82,3 +83,10 @@
 
 </script>
 <include file="Index/footer" />
+
+
+
+
+
+
+
