--- a/model/Html/adminhtml/Login/index.html
+++ b/model/Html/adminhtml/Login/index.html
@@ -13,9 +13,11 @@
   <title>singcms内容管理平台</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/Public/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="/Public/css/bootstrap.min.css" rel="stylesheet"> -->
+  <load href='__PUBLIC__/css/bootstrap.min.css' />
   <!-- Custom styles for this template -->
-  <link href="signin.css" rel="stylesheet">
+  <!-- <link href="signin.css" rel="stylesheet"> -->
+  <load href='__PUBLIC__/signin.css' />
 
 
 
@@ -46,10 +48,14 @@
     </form>
 
 </div> <!-- /container -->
-<script src="/Public/js/jquery.js"></script>
+<!-- <script src="/Public/js/jquery.js"></script>
 <script src="/Public/js/dialog/layer.js"></script>
 <script src="/Public/js/dialog.js"></script>
-<script src="/Public/js/admin/login.js"></script>
+<script src="/Public/js/admin/login.js"></script> -->
+<load href='__PUBLIC__/js/jquery.js' />
+<load href='__PUBLIC__/js/dialog/layer.js' />
+<load href='__PUBLIC__/js/dialog.js' />
+<load href='__PUBLIC__/js/admin/login.js' />
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 </body>
 </html>
