--- a/model/Html/adminhtml/Menu/edit.html
+++ b/model/Html/adminhtml/Menu/edit.html
@@ -40,8 +40,8 @@
                     <div class="form-group">
                         <label for="inputPassword3" class="col-sm-2 control-label">菜单类型:</label>
                         <div class="col-sm-5">
-                            <input type="radio" name="type" id="optionsRadiosInline1" value="1" <if condition="$menu.type eq 1">checked</if>> 后台菜单
-                            <input type="radio" name="type" id="optionsRadiosInline2" value="0" <if condition="$menu.type eq 0">checked</if>> 前端栏目
+                            <input type="radio" name="type" id="optionsRadiosInline1"> value="1" <if condition="$menu.type eq 1">checked</if>> 后台菜单
+                            <input type="radio" name="type" id="optionsRadiosInline2"> value="0" <if condition="$menu.type eq 0">checked</if>> 前端栏目
                         </div>
 
                     </div>
@@ -75,8 +75,8 @@
                     <div class="form-group">
                         <label for="inputPassword3" class="col-sm-2 control-label">状态:</label>
                         <div class="col-sm-5">
-                            <input type="radio" name="status" id="optionsRadiosInline1" value="1" <if condition="$menu.status eq 1">checked</if>> 开启
-                            <input type="radio" name="status" id="optionsRadiosInline2" value="0" <if condition="$menu.status eq 0">checked</if>> 关闭
+                            <input type="radio" name="status" id="optionsRadiosInline1" value="1"> <if condition="$menu.status eq 1">checked</if>> 开启
+                            <input type="radio" name="status" id="optionsRadiosInline2" value="0"> <if condition="$menu.status eq 0">checked</if>> 关闭
                         </div>
 
                     </div>
