--- a/model/Html/adminhtml/Menu/index.html
+++ b/model/Html/adminhtml/Menu/index.html
@@ -33,8 +33,8 @@
                     <select class="form-control" name="type">
                         <option value='' >请选择类型</option>
 
-                        <option value="1" <if condition="$type eq 1">selected="selected"</if>>后台菜单</option>
-                        <option value="0" <if condition="$type eq 0">selected="selected"</if>>前端导航</option>
+                        <option value="1"> <if condition="$type eq 1">selected="selected"</if>>后台菜单</option>
+                        <option value="0"> <if condition="$type eq 0">selected="selected"</if>>前端导航</option>
                     <lect>
                 </div>
 
