--- a/model/Html/adminhtml/Position/add.html
+++ b/model/Html/adminhtml/Position/add.html
@@ -78,5 +78,7 @@
 
 </script>
 <!-- /#wrapper -->
-<script type="text/javascript" src="/Public/js/admin/form.js"></script>
+<!-- <script type="text/javascript" src="/Public/js/admin/form.js"></script> -->
+<load href='__PUBLIC__/js/admin/form.js' />
+
 <include file="Index/footer" />
