--- a/model/Html/adminhtml/Position/edit.html
+++ b/model/Html/adminhtml/Position/edit.html
@@ -72,5 +72,15 @@
 
 </script>
 <!-- /#wrapper -->
-<script type="text/javascript" src="/Public/js/admin/form.js"></script>
+<!-- <script type="text/javascript" src="/Public/js/admin/form.js"></script> -->
+<load href='__PUBLIC__/js/admin/form.js' />
 <include file="Index/footer" />
+
+
+
+
+
+
+
+
+
